[gd_scene load_steps=2 format=3 uid="uid://blmckgk5jwk86"]

[ext_resource type="Script" path="res://interface/admin_menu/admin_menu.gd" id="1_n45hs"]

[node name="CC" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_n45hs")

[node name="P" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="MC" type="MarginContainer" parent="P"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="Login" type="VBoxContainer" parent="P/MC"]
layout_mode = 2

[node name="admin_menu_lable" type="Label" parent="P/MC/Login"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Admin menu"

[node name="units_label" type="Label" parent="P/MC/Login"]
layout_mode = 2
text = "Units
"

[node name="units_HBC" type="HBoxContainer" parent="P/MC/Login"]
layout_mode = 2
alignment = 1

[node name="list" type="Button" parent="P/MC/Login/units_HBC"]
layout_mode = 2
size_flags_horizontal = 3
text = "List menu"

[node name="add" type="Button" parent="P/MC/Login/units_HBC"]
layout_mode = 2
size_flags_horizontal = 3
text = "Add menu"

[node name="products_label" type="Label" parent="P/MC/Login"]
layout_mode = 2
text = "Products"

[node name="products_HBC" type="HBoxContainer" parent="P/MC/Login"]
layout_mode = 2
alignment = 1

[node name="list" type="Button" parent="P/MC/Login/products_HBC"]
layout_mode = 2
size_flags_horizontal = 3
text = "List menu
"

[node name="add" type="Button" parent="P/MC/Login/products_HBC"]
layout_mode = 2
size_flags_horizontal = 3
text = "Add menu"

[connection signal="pressed" from="P/MC/Login/units_HBC/list" to="." method="_on_units_list_pressed"]
[connection signal="pressed" from="P/MC/Login/units_HBC/add" to="." method="_on_unit_add_pressed"]
[connection signal="pressed" from="P/MC/Login/products_HBC/list" to="." method="_on_products_list_pressed"]
[connection signal="pressed" from="P/MC/Login/products_HBC/add" to="." method="_on_add_product_pressed"]
